# wctype_cpp

./: CMakeLists.txt  README.md  generator.h  main.cpp
benchmarks/: CMakeLists.txt  classification_benchmark.cpp
rfc/: draft.md
scripts/: rsync.sh
src/: CMakeLists.txt  conversion_generator.h  generator.cpp  generator.h  main.cpp  mywctype.h  staged_conversion_generator.h  wctype_tables.cpp
src/python/: README.md  classification_generator.py
src/v8/: CMakeLists.txt  v8_unicode.h
tests/: CMakeLists.txt  iswalnum_test.cpp  iswalpha_test.cpp  iswblank_test.cpp  iswctype_test.cpp  iswdigit_test.cpp  iswgraph_test.cpp  iswlower_test.cpp  iswpunct_test.cpp  iswspace_test.cpp  iswxdigit_test.cpp  test_wctype.cpp  wctype_test.cpp  wctype_test_base.h
